# pluginvault

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: arch.rs  db.rs  lib.rs  main.rs  operations.rs  plugin.rs  scanner.rs
src/lib/: commands.ts  stores.ts  types.ts
src/lib/components/: PluginDetail.svelte  PluginTable.svelte  Toolbar.svelte
