[package]
name = "pluginvault"
version = "0.1.0"
description = "Audio plugin manager for macOS"
authors = ["PluginVault"]
edition = "2021"

[lib]
name = "pluginvault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
plist = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
